--- a/app/src/main/res/layout/item_farmacia.xml
+++ b/app/src/main/res/layout/item_farmacia.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="match_parent"
     app:cardBackgroundColor="#81C784"
     app:cardCornerRadius="45dp"
     app:cardElevation="10dp"
